--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.9.3'
+    compileOnly 'org.projectlombok:lombok:1.18.16'
+
 
 }
 
