--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,10 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.9.3'
     compileOnly 'org.projectlombok:lombok:1.18.16'
+    testImplementation 'org.assertj:assertj-core:3.24.2'
+    testImplementation 'org.hamcrest:hamcrest-all:1.3'
+
+
 
 
 }
