--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,12 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
     testImplementation 'org.junit.platform:junit-platform-launcher:1.9.3'
-    compileOnly 'org.projectlombok:lombok:1.18.16'
+    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.9.3'
+
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
+
+    compileOnly 'org.projectlombok:lombok:1.18.16'
 
 }
 
