--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ dependencies {
     testImplementation 'org.assertj:assertj-core:3.24.2'
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
+    testImplementation 'org.mockito:mockito-core:5.3.1'
+
     compileOnly 'org.projectlombok:lombok:1.18.16'
 
 }
