--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 
     testImplementation 'org.mockito:mockito-core:5.3.1'
+    testImplementation 'org.mockito:mockito-junit-jupiter:5.3.1'
 
     compileOnly 'org.projectlombok:lombok:1.18.16'
 
